# backup

./: .autocommit.yaml  .autocommit.yaml.sample  .bash_profile  .gitignore  .profile  README.md  autocommit_scan.py  backup-sync.md  pyproject.toml  run_autocommit_cron.sh  run_autocommit_home.sh  run_autocommit_tray.sh  test_autocommit_scan.py  test_autocommit_tray.py  test_fingerprint.py  test_sync.py
.config/: .gitignore
Caligrafie/: linii.py
Documents/: .gitignore  Dvorak Romanian.keylayout
Documents/Gabi/: .gitignore
Documents/MuseScore2/: .gitignore
Documents/MuseScore2/Partituri/: .Rainbow_-_Temple_of_the_King.mscz,  Once_upon_a_time_in_the_west.mscz  Rainbow_-_Temple_of_the_King.mscz
Documents/MuseScore2/Scores/: .Binecuvantarile_invierii.mscz,  .Doi boieri batraniu-T.mscz,  .Frunza galbena - 2.mscz,  .Frunza galbena.mscz,  .La_Betleem_colo-n_jos-tmp.mscz,  .Perfect_day.mscz,  A_cui_curtiu_sint_aistea.mscz  Binecuvantarile_invierii.mscz  Bun_gand_te-oi_ganditu.mscz  Catavasiile_Bunei-Vestiri.mscz  Cântec_despre_Bucovina.mscz  Călușeii.mscz  Din_cer_senin.mscz  Doi boieri batraniu-T.mscz  Frunza galbena - 2.mscz  (+10 more)
Documents/r-language/: tutorial.1.r
Psaltic/: Caciulile - Ion Hagiu.mscz  Colinda Crăciunului.mscz  Psalm 1 2 3.mscz  Troparul-sf-Dimitrie.pages  temperament-diatonic
Psaltic/.mscbackup/: .Caciulile - Ion Hagiu.mscz~
autocommit_tray/: app.py  config.py  cron.py  icons.py  scheduler_install.py  settings.py  state.py
copii/: .gitignore
copii/Paraschiv/: .gitignore
copii/ciresarii/: roata-norocului.xcf
sync/: fingerprint.py  sync.py
(+35 files in other folders)
