[tool.poetry]
name = "git-autocommit-backup"
version = "0.1.0"
description = "Scan nested repositories and perform configurable auto-commits"
authors = ["Virgil <virgil@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["."]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"